error_templates/java/test_files/cannot_be_applied_error/test.txt
template: "Java.CannotBeAppliedError"
---
CannotBeApplied.java:3: error: method addValues in class CannotBeApplied cannot be applied to given types;
        int result = addValues("5", 10); // Attempting to add a string and an integer
                     ^
  required: int,int
  found:    String,int
  reason: argument mismatch; String cannot be converted to int
1 error
===
template: "Java.CannotBeAppliedError"
---
# CannotBeAppliedError
This error occurs when there is an attempt to apply a method with arguments that do not match the method signature.
```
    public static void main(String[] args) {
        int result = addValues("5", 10); // Attempting to add a string and an integer
                               ^^^
    }
    
```
## Steps to fix
### Use the correct argument types
Provide the correct argument types when calling the `addValues` method.
```diff
public class CannotBeApplied {
    public static void main(String[] args) {
-         int result = addValues("5", 10); // Attempting to add a string and an integer
+         int result = addValues(Integer.parseInt("5"), 10); // Attempting to add a string and an integer
    }
    
```